# Aureus_Coding_Agent

./: .gitignore  LICENSE  README.md  TERMINATION_CONDITIONS.md  THREE_TIER_COORDINATION_COMPLETE.md  architecture.md  aureus-self-policy.yaml  pyproject.toml  quickstart.py  roadmap.md  solution.md
docs/: CODE_SEPARATION_BOUNDARIES.md  architecture.md  cli-examples.md  design-decisions.md  error-catalog.md  gvufd-prompts.md  intent-parser-prompts.md  meta-governance.md  repository-indexer-decision.md  strategic-decisions.md
examples/: README.md  example_mock_provider.py  example_openai_provider.py  policy-enterprise.yaml  policy-simple-api.yaml
src/: errors.py  interfaces.py
tests/: test_additional_tools.py  test_agentic_loop.py  test_builder_agent.py  test_builder_enhanced.py  test_cli.py  test_complete_system.py  test_complex_generation.py  test_continuous_learning.py  test_e2e.py  test_e2e_complete.py  test_e2e_real_integration.py  test_enhanced_errors.py  test_extension_manager.py  test_extensions_base.py  test_global_value_alignment.py  test_gvufd.py  test_hooks.py  test_instructions.py  test_integration.py  test_intent_parser.py  test_interfaces.py  test_memory.py  test_model_provider.py  test_planner.py  test_policy_loader.py  test_progress_indicators.py  test_real_intelligence.py  test_reflection_loop.py  test_sandbox.py  test_skills.py  test_spk.py  test_summarization.py  test_three_tier_coordination.py  test_toolbus.py  test_user_interaction.py
workspace/: bst.py  calculator.py  deque.py  fibonacci.py  generated_code.py  hello_world.py  linked_list.py  (+2 more)
(+66 files in other folders)
