[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aureus"
version = "0.1.0"
description = "AUREUS Coding Agent - Semantic compiler for software intent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Business Source License 1.1"}
authors = [
    {name = "AUREUS Team"},
    {name = "Liew Keong Han"}
]
keywords = ["ai", "coding-agent", "governance", "complexity-management", "semantic-compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
aureus = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
